adds zenburn theme as submodule 	modified:   .gitmodules 	new file:   init.el 	new file:   themes/zenburn-theme.el

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "better-defaults"]
 	path = better-defaults
 	url = https://github.com/technomancy/better-defaults.git
+[submodule "themes/zenburn"]
+	path = themes/zenburn
+	url = https://github.com/bbatsov/zenburn-emacs.git
