added expand-region 	modified:   .gitmodules 	new file:   expand-region 	modified:   init.el

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "el-get"]
 	path = el-get
 	url = git://github.com/dimitri/el-get.git
+[submodule "expand-region"]
+	path = expand-region
+	url = https://github.com/magnars/expand-region.el.git
